Update run.bat